--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -1,6 +1,7 @@
 name: build-test-deploy
 
-on: push
+on: 
+  push:
 
 jobs:
   build:
@@ -13,6 +14,7 @@ jobs:
         uses: actions/setup-node@v4
         with: 
           node-version: '20.x'
-      -run: npm install
-      -run: npm run build
-      
+      - name: install dependencies
+        run: npm install
+      - name: build project
+        run: npm run build
