--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -18,3 +18,17 @@ jobs:
         run: npm install
       - name: build project
         run: npm run build
+
+  test:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: checkout-repo
+        uses: actions/checkout@v4
+      - name: use node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+      - run: npm install
+      - run: npm test
