--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -30,5 +30,43 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - run: npm install
-      - run: npm test
+      - name: install dependencies
+        run: npm install
+      - name: run tests
+        run: npm test
+
+  deploy:
+    needs: test
+    permissions:
+      contents: write
+      pages: write
+      id-token: write
+    environment:
+      name: production
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout-repo
+        uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: use node.js
+        uses: actions/setup-node@v4
+        with: 
+          node-version: '20.x'
+      - name: configure-github-pages
+        uses: actions/configure-pages@v4
+        with:
+          static_site_generator: next
+      - name: install dependencies
+        run: npm install
+      - name: build project
+        run: npm run build
+      - name: upload artifacts
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './out'
+      - name: deploy
+        id: deployment
+        uses: actions/deploy-pages@v4
